# 2026-04-22_instagram-reel-info-brief

./: .gitignore  README.md  docker-compose.yml  run.sh
backend/: database.py  main.py  models.py  pyproject.toml
backend/services/: analyzer.py  audio.py  downloader.py  instagram_auth.py  transcriber.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: InfoPanel.tsx  InsightsPanel.tsx  JobCard.tsx  LoginGate.tsx  UrlInput.tsx  VideoPanel.tsx
