[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "faster-whisper>=1.2.1",
    "greenlet>=3.4.0",
    "httpx>=0.28.1",
    "instaloader>=4.15.1",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.45.0",
    "yt-dlp>=2026.3.17",
]
